[gd_scene load_steps=5 format=3 uid="uid://cmb7mm0mpsu0f"]

[ext_resource type="FontFile" uid="uid://q3hbl03m21y7" path="res://fonts/Rajdhani/Rajdhani-Medium.ttf" id="1_46c1a"]
[ext_resource type="Script" path="res://scenes/load_character.gd" id="1_gs4dv"]
[ext_resource type="PackedScene" uid="uid://bc23stwlrw6k1" path="res://buttons/character_button.tscn" id="2_d004w"]
[ext_resource type="PackedScene" uid="uid://cangyufcwtje1" path="res://scenes/blank_sheet.tscn" id="3_lejoh"]

[node name="load_character" type="Control" node_paths=PackedStringArray("template_container")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gs4dv")
template_container = NodePath("template_container")
character_button = ExtResource("2_d004w")
sheet = ExtResource("3_lejoh")

[node name="select_template" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -223.5
offset_top = 45.0
offset_right = 223.5
offset_bottom = 103.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_46c1a")
theme_override_font_sizes/font_size = 45
text = "Select a Character Sheet"

[node name="template_container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -211.0
offset_right = 164.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2

[node name="back_to_menu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -45.0
offset_right = 97.0
offset_bottom = -4.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_46c1a")
theme_override_font_sizes/font_size = 25
text = "Back"

[connection signal="pressed" from="back_to_menu" to="." method="_on_back_to_menu_pressed"]
